[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Font/manaspc.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Tutorial.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TutorialLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TutorialLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Tutorial" type="Popup" groups=[
"Tutorial",
]]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "WASD to move"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )
[connection signal="advance_tutorial" from="." to="." method="_on_Tutorial_advance_tutorial"]
